--- a/service-product-stock/src/app/globals.css
+++ b/service-product-stock/src/app/globals.css
@@ -3,13 +3,13 @@
 @tailwind utilities;
 
 :root {
-	--background: #ffffff;
+	--background: #79e0ff;
 	--foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
 	:root {
-		--background: #0a0a0a;
+		--background: #006c8d;
 		--foreground: #ededed;
 	}
 }
